--- a/_posts/2023_07_16_WIL.md
+++ b/_posts/2023_07_16_WIL.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Test page"
+title: "2023-07-16 Axios에 대하여 (feat. fetch)"
 description: 
 date: 2023-07-11
 feature_image: 
