--- a/_posts/algorithm-programmers/2023-10-05-120908.md
+++ b/_posts/algorithm-programmers/2023-10-05-120908.md
@@ -1,6 +1,5 @@
 ---
-title: "프로그래머스 문자열안에 문자열
-    자바스크립트 알고리즘 풀이"
+title: "프로그래머스 문자열안에 문자열 자바스크립트 알고리즘 풀이"
 last_modified_at: 2023-10-05
 categories:
     - algorithm-programmers
