update: 23-10-19 til 알고리즘 문제 추가

--- a/_posts/TIL/2023-10-19-TIL-231019.md
+++ b/_posts/TIL/2023-10-19-TIL-231019.md
@@ -9,6 +9,8 @@ tags:
 ## 오늘 한 일
 -   프로그래머스 알고리즘 풀이
     -   [lv.0 rny_string](https://makepin2r.github.io/algorithm-programmers/181863/)
+    -   [lv.0 소문자로 바꾸기](https://makepin2r.github.io/algorithm-programmers/181876/)
+    -   [lv.0 문자열 정수의 합](https://makepin2r.github.io/algorithm-programmers/181849/)
 - Vue.js 기본 문법을 학습했다.
     - 새로 입사할 회사에서 vue를 사용하고 있어서 입사 전까지 미리 기본을 숙지하고 가기로 했다.  
       내 목표는 vue + vuex, vue + vuex + ts, nuxt 조합으로 4~5개의 투두리스트를 반복적으로 완성하는 것이다.
