update: 23-10-19 til 업데이트

--- a/_posts/TIL/2023-10-19-TIL-231019.md
+++ b/_posts/TIL/2023-10-19-TIL-231019.md
@@ -17,3 +17,6 @@ tags:
     - 오늘은 기본적인 데이터 바인딩 방식, vue에서 사용하는 구문(v-for, v-if/else, `:` 사용 등)을 공부해 간단한 쇼핑몰 리스트와 모달 UI를 만들었다.  
       vuecli의 폴더 구조도 익혀봤다.
     - 코딩애플 강의와 공식문서를 참고하여 공부했다. 
+- github 프로필을 업데이트했다.  
+  이걸 하면서 우연히 SVG의 네임스페이스 개념에 대해 공부하게 됐다.  
+  새로 알게 된 재미있는 것들이 많아 [글로 정리해뒀다](https://makepin2r.github.io/tips/github-profile-custom/).
