--- a/_posts/TIL/2023-10-20-TIL-231020.md
+++ b/_posts/TIL/2023-10-20-TIL-231020.md
@@ -9,9 +9,9 @@ tags:
 
 ## 오늘 한 일
 -   프로그래머스 알고리즘 풀이
-    -   [lv.0 rny_string](https://makepin2r.github.io/algorithm-programmers/181863/)
-    -   [lv.0 소문자로 바꾸기](https://makepin2r.github.io/algorithm-programmers/181876/)
-    -   [lv.0 문자열 정수의 합](https://makepin2r.github.io/algorithm-programmers/181849/)
+    -   [lv.0 주사위 게임 1](https://makepin2r.github.io/algorithm-programmers/181839/)
+    -   [lv.0 부분 문자열인지 확인하기](https://makepin2r.github.io/algorithm-programmers/181843/)
+    -   [lv.0 첫 번째로 나오는 음수](https://makepin2r.github.io/algorithm-programmers/181896/)
 - 어제 학습한 Vue 기본 문법에 대해 공식 문서를 읽고 복습
     -   [Vue 개발 환경 세팅](https://makepin2r.github.io/vue/vue-environment/)
     -   [싱글 파일 컴포넌트](https://makepin2r.github.io/vue/vue-sfc)
