update: props 학습 내용 추가

--- a/_posts/TIL/2023-10-20-TIL-231020.md
+++ b/_posts/TIL/2023-10-20-TIL-231020.md
@@ -17,3 +17,4 @@ tags:
     -   [싱글 파일 컴포넌트](https://makepin2r.github.io/vue/vue-sfc)
     -   [Vue의 데이터 바인딩 방법](https://makepin2r.github.io/vue/vue-data-binding/)
     -   [v-if/v-else와 v-for](https://makepin2r.github.io/vue/vue-vfor-vif/)
+    -   [props](https://makepin2r.github.io/vue/vue-props/)
