--- a/src/posts/2023/2023-08-03-ts-settings.mdx
+++ b/src/posts/2023/2023-08-03-ts-settings.mdx
@@ -1,20 +1,20 @@
 ---
 title: "TypeScript 프로젝트 세팅"
 categories:
-    - TypeScript
+  - TypeScript
 last_modified_at: 2023-08-03
 tags:
-    - TypeScript
+  - TypeScript
 ---
 
-> [NomadCoders의 <타입스크립트로 블록체인 만들기>](https://nomadcoders.co/typescript-for-beginners/) 수업을 참고하여 작성하였습니다.
+> [NomadCoders의 "타입스크립트로 블록체인 만들기"](https://nomadcoders.co/typescript-for-beginners/) 수업을 참고하여 작성하였습니다.
 
 VSCode를 사용하고 TypeScript를 이미 설치한 경우,
 프로젝트 폴더에 `tsconfig.json`이 있으면 자동으로 해당 프로젝트가 TypeScript 기반임을 인식한다.
 
 ## 기본 환경
 
--   NodeJS
+- NodeJS
 
 ## TypeScript 설치
 
@@ -39,11 +39,11 @@ npm init -y
 
 ```json
 {
-    "include": ["src"], // ts 파일이 위치할 경로
-    "compilerOptions": {
-        "outDir": "build", // 컴파일된 js 파일이 위치할 경로
-        "target": "es6" // 디폴트는 es2016. 특정 버전의 js로 컴파일되기를 원할 시에 수정
-    }
+  "include": ["src"], // ts 파일이 위치할 경로
+  "compilerOptions": {
+    "outDir": "build", // 컴파일된 js 파일이 위치할 경로
+    "target": "es6" // 디폴트는 es2016. 특정 버전의 js로 컴파일되기를 원할 시에 수정
+  }
 }
 ```
 
